--- a/.gitignore
+++ b/.gitignore
@@ -8,14 +8,14 @@
 /client/.pnp.js
 
 # testing
-/client//coverage
+/client/coverage
 
 # next.js
-/client//.next/
-/client//out/
+/client/.next/
+/client/out/
 
 # production
-/client//build
+/client/build
 
 # misc
 /client/.DS_Store
@@ -36,3 +36,6 @@
 # typescript
 /client/*.tsbuildinfo
 /client/next-env.d.ts
+
+# vs code 
+/client/.vscode/
