chore: create server app

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,6 @@ client/*.local
 
 # Editor directories and files
 client/.vscode/*
-client/!.vscode/extensions.json
 client/.idea
 client/.DS_Store
 client/*.suo
@@ -23,3 +22,36 @@ client/*.ntvs*
 client/*.njsproj
 client/*.sln
 client/*.sw?
+
+# Server folders to ignore
+# compiled output
+server/dist
+server/node_modules
+
+# Logs
+server/logs
+server/*.log
+server/npm-debug.log*
+server/pnpm-debug.log*
+server/yarn-debug.log*
+server/yarn-error.log*
+server/lerna-debug.log*
+
+# OS
+server/.DS_Store
+
+# Tests
+server/coverage
+server/.nyc_output
+
+# IDEs and editors
+server/.idea
+server/.project
+server/.classpath
+server/.c9/
+server/*.launch
+server/.settings/
+server/*.sublime-workspace
+
+# IDE - VSCode
+server/.vscode/*
