chore: update docker-compose envs

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,23 +1,23 @@
 version: '3.8'
 services:
   dev-db:
-    image: postgres:13
+    image: mysql:8.0.32
     ports:
       - 5434:5432
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 123
-      POSTGRES_DB: nest
+      MYSQL_USER: mysql
+      MYSQL_PASSWORD: 123
+      MYSQL_DB: nest
     networks:
       - freecodecamp
   test-db:
-    image: postgres:13
+    image: mysql:8.0.32
     ports:
       - 5435:5432
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 123
-      POSTGRES_DB: nest
+      MYSQL_USER: mysql
+      MYSQL_PASSWORD: 123
+      MYSQL_DB: nest
     networks:
       - freecodecamp
 networks:
