--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -2,22 +2,25 @@ version: '3.8'
 services:
   dev-db:
     image: mysql:8.0.32
+    restart: always
     ports:
-      - 5434:5432
+      - 3306:3306
     environment:
+      MYSQL_DATABASE: nest
       MYSQL_USER: mysql
       MYSQL_PASSWORD: 123
-      MYSQL_DB: nest
+      MYSQL_ROOT_PASSWORD: 1234
     networks:
       - freecodecamp
   test-db:
     image: mysql:8.0.32
     ports:
-      - 5435:5432
+      - 3307:3306
     environment:
+      MYSQL_DATABASE: nest
       MYSQL_USER: mysql
       MYSQL_PASSWORD: 123
-      MYSQL_DB: nest
+      MYSQL_ROOT_PASSWORD: 1234
     networks:
       - freecodecamp
 networks:
