chore: add scripts

--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,14 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "prisma:dev:push": "prisma db push",
+    "db:dev:rm": "docker compose rm dev-db -svf",
+    "db:dev:up": "docker compose up dev-db -d",
+    "db:dev:restart": "npm run db:dev:rm && npm run db:dev:up && sleep 15 && prisma db push",
+    "prisma:test:push": "dotenv -e .env.test -- npm run prisma:dev:push",
+    "db:test:rm": "docker compose rm test-db -svf",
+    "db:test:up": "docker compose up test-db -d",
+    "db:test:restart": "npm run db:test:rm && npm run db:test:up && sleep 15 && npm run prisma:test:push",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
