--- a/.github/workflows/e2e-server-testing.yml
+++ b/.github/workflows/e2e-server-testing.yml
@@ -11,11 +11,13 @@ jobs:
         node-version: [18.x]
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Setup server directory
+        working-directory: ./server
+      - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install packages
-        run: cd server && npm i
+        run: npm i
       - name: Run e2e tests
         run: npm run test:ci
