chore: use github envs

--- a/.github/workflows/e2e-server-testing.yml
+++ b/.github/workflows/e2e-server-testing.yml
@@ -9,7 +9,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Run e2e tests
-        working-directory: ./server
+        with:
+          DATABASE_URL: ${{env.DATABASE_URL}}
+          JWT_SECRET: ${{env.JWT_SECRET}}
         run: |
           npm i
           npm run test:ci
