--- a/.github/workflows/e2e-server-testing.yml
+++ b/.github/workflows/e2e-server-testing.yml
@@ -9,7 +9,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Test envs
-        run: echo "${{secrets.DATABASE_URL}} ${{secrets.JWT_SECRET}}"
+        run: |
+          echo $DATABASE_URL
+          echo $JWT_SECRET
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
       - name: Run e2e tests
         working-directory: ./server
         run: |
