--- a/.github/workflows/e2e-server-testing.yml
+++ b/.github/workflows/e2e-server-testing.yml
@@ -10,13 +10,13 @@ jobs:
         uses: actions/checkout@v2
       - name: Test envs
         run: |
-          echo ${{ secrets.DATABASE_URL }} | sed 's/./& /g' 
-          echo ${{ secrets.JWT_SECRET }} | sed 's/./& /g'
+          echo ${{ vars.DATABASE_URL }} | sed 's/./& /g' 
+          echo ${{ vars.JWT_SECRET }} | sed 's/./& /g'
       - name: Run e2e tests
         working-directory: ./server
         run: |
           npm i
           npm run test:ci
         env:
-          DATABASE_URL: ${{secrets.DATABASE_URL}}
-          JWT_SECRET: ${{secrets.JWT_SECRET}}
+          DATABASE_URL: ${{vars.DATABASE_URL}}
+          JWT_SECRET: ${{vars.JWT_SECRET}}
