--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "pretest:e2e": "npm run db:test:restart",
     "test:e2e": "dotenv -e .env.test -- jest --watch --no-cache --config ./test/jest-e2e.json",
+    "pretest:ci": "npm run db:test:restart",
     "test:ci": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
