--- a/.github/workflows/e2e-server-testing.yml
+++ b/.github/workflows/e2e-server-testing.yml
@@ -1,6 +1,9 @@
 name: e2e-test-server
 
-on: [pull_request]
+on:
+  pull_request:
+    branches:
+      - '*server*'    
 
 jobs:
   e2e-test-server:
