--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .vscode 
+.DS_Store
 
 # Client folders to ignore
 # Logs
@@ -18,7 +19,6 @@ client/*.local
 # Editor directories and files
 client/.vscode/*
 client/.idea
-client/.DS_Store
 client/*.suo
 client/*.ntvs*
 client/*.njsproj
