--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@tanstack/react-query": "4.26.1",
     "clsx": "1.2.1",
+    "jwt-decode": "3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2"
+    "react-router-dom": "^6.8.2",
+    "universal-cookie": "4.0.4"
   },
   "devDependencies": {
     "@types/node": "^18.15.0",
