--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,15 @@
     "@tanstack/react-query": "4.26.1",
     "clsx": "1.2.1",
     "jwt-decode": "3.1.2",
+    "lodash-es": "4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
-    "universal-cookie": "4.0.4"
+    "universal-cookie": "4.0.4",
+    "zod": "3.21.4"
   },
   "devDependencies": {
+    "@types/lodash-es": "4.17.6",
     "@types/node": "^18.15.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.11",
