--- a/client/package.json
+++ b/client/package.json
@@ -2,11 +2,12 @@
   "name": "client",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write \"src/**/*{.ts,.tsx}\"",
+    "lint": "eslint . --ext .ts,.tsx --fix"
   },
   "dependencies": {
     "@tanstack/react-query": "4.26.1",
@@ -24,9 +25,18 @@
     "@types/node": "^18.15.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "5.54.1",
+    "@typescript-eslint/parser": "5.54.1",
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.14",
+    "eslint": "8.36.0",
+    "eslint-config-prettier": "8.7.0",
+    "eslint-import-resolver-typescript": "3.5.3",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.2",
     "postcss": "^8.4.21",
+    "prettier": "2.8.4",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3",
     "vite": "^4.1.4",
