--- a/client/package.json
+++ b/client/package.json
@@ -14,32 +14,32 @@
     "clsx": "1.2.1",
     "jwt-decode": "3.1.2",
     "lodash-es": "4.17.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.8.2",
     "universal-cookie": "4.0.4",
     "zod": "3.21.4"
   },
   "devDependencies": {
     "@types/lodash-es": "4.17.6",
-    "@types/node": "^18.15.0",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.11",
+    "@types/node": "18.15.0",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.11",
     "@typescript-eslint/eslint-plugin": "5.54.1",
     "@typescript-eslint/parser": "5.54.1",
-    "@vitejs/plugin-react": "^3.0.0",
-    "autoprefixer": "^10.4.14",
+    "@vitejs/plugin-react": "3.0.0",
+    "autoprefixer": "10.4.14",
     "eslint": "8.36.0",
     "eslint-config-prettier": "8.7.0",
     "eslint-import-resolver-typescript": "3.5.3",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
-    "postcss": "^8.4.21",
+    "postcss": "8.4.21",
     "prettier": "2.8.4",
-    "tailwindcss": "^3.2.7",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.4",
+    "tailwindcss": "3.2.7",
+    "typescript": "4.9.3",
+    "vite": "4.1.4",
     "vite-plugin-svgr": "2.4.0"
   }
 }
