--- a/server/package.json
+++ b/server/package.json
@@ -31,47 +31,47 @@
     "test:ci": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^9.3.9",
-    "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.3.9",
-    "@nestjs/jwt": "^10.0.1",
-    "@nestjs/passport": "^9.0.1",
-    "@nestjs/platform-express": "^9.3.9",
+    "@nestjs/common": "9.3.9",
+    "@nestjs/config": "2.2.0",
+    "@nestjs/core": "9.3.9",
+    "@nestjs/jwt": "10.0.1",
+    "@nestjs/passport": "9.0.1",
+    "@nestjs/platform-express": "9.3.9",
     "@prisma/client": "4.11.0",
-    "argon2": "^0.30.3",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
-    "passport": "^0.6.0",
+    "argon2": "0.30.3",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.0",
+    "passport": "0.6.0",
     "passport-jwt": "4.0.1",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "reflect-metadata": "0.1.13",
+    "rxjs": "7.2.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.3.9",
-    "@types/express": "^4.17.13",
+    "@nestjs/cli": "9.0.0",
+    "@nestjs/schematics": "9.0.0",
+    "@nestjs/testing": "9.3.9",
+    "@types/express": "4.17.13",
     "@types/jest": "29.4.0",
     "@types/node": "18.14.6",
     "@types/passport-jwt": "3.0.8",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.54.0",
-    "@typescript-eslint/parser": "^5.54.0",
-    "dotenv-cli": "^7.0.0",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "@types/supertest": "2.0.11",
+    "@typescript-eslint/eslint-plugin": "5.54.0",
+    "@typescript-eslint/parser": "5.54.0",
+    "dotenv-cli": "7.0.0",
+    "eslint": "8.36.0",
+    "eslint-config-prettier": "8.7.0",
+    "eslint-plugin-prettier": "4.0.0",
     "jest": "29.5.0",
-    "pactum": "^3.3.2",
-    "prettier": "^2.3.2",
-    "prisma": "^4.11.0",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
+    "pactum": "3.3.2",
+    "prettier": "2.3.2",
+    "prisma": "4.11.0",
+    "source-map-support": "0.5.20",
+    "supertest": "6.1.3",
     "ts-jest": "29.0.5",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-loader": "9.2.3",
+    "ts-node": "10.0.0",
     "tsconfig-paths": "4.1.2",
-    "typescript": "^4.7.4"
+    "typescript": "4.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
