--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,26 +1,17 @@
 version: '3.8'
+
 services:
-  dev-db:
-    image: mysql:8.0.32
-    ports:
-      - 3306:3306
+  db:
+    image: postgres:14.1-alpine
+    restart: always
     environment:
-      MYSQL_DATABASE: nest
-      MYSQL_USER: mysql
-      MYSQL_PASSWORD: 123
-      MYSQL_ROOT_PASSWORD: 1234
-    networks:
-      - freecodecamp
-  test-db:
-    image: mysql:8.0.32
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
     ports:
-      - 3307:3306
-    environment:
-      MYSQL_DATABASE: nest
-      MYSQL_USER: mysql
-      MYSQL_PASSWORD: 123
-      MYSQL_ROOT_PASSWORD: 1234
-    networks:
-      - freecodecamp
-networks:
-  freecodecamp:
+      - '5432:5432'
+    volumes:
+      - db:/var/lib/postgresql/data
+
+volumes:
+  db:
+    driver: local
