--- a/server/package.json
+++ b/server/package.json
@@ -37,14 +37,17 @@
     "@nestjs/jwt": "10.0.2",
     "@nestjs/passport": "9.0.3",
     "@nestjs/platform-express": "9.3.12",
+    "@nestjs/typeorm": "9.0.1",
     "@prisma/client": "4.11.0",
     "argon2": "0.30.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "passport": "0.6.0",
     "passport-jwt": "4.0.1",
+    "pg": "8.10.0",
     "reflect-metadata": "0.1.13",
-    "rxjs": "7.8.0"
+    "rxjs": "7.8.0",
+    "typeorm": "0.3.12"
   },
   "devDependencies": {
     "@nestjs/cli": "9.3.0",
