Add typeorm scripts

--- a/server/package.json
+++ b/server/package.json
@@ -6,14 +6,11 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "prisma:dev:push": "prisma db push",
-    "db:dev:rm": "docker compose rm dev-db -svf",
-    "db:dev:up": "docker compose up dev-db -d",
-    "db:dev:restart": "npm run db:dev:rm && npm run db:dev:up && sleep 15 && prisma db push",
-    "prisma:test:push": "dotenv -e .env.test -- npm run prisma:dev:push",
-    "db:test:rm": "docker compose rm test-db -svf",
-    "db:test:up": "docker compose up test-db -d",
-    "db:test:restart": "npm run db:test:rm && npm run db:test:up && sleep 15 && npm run prisma:test:push",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/typeorm.config.ts",
+    "typeorm:create": "npm run typeorm migration:create -- -n",
+    "typeorm:generate": "npm run typeorm migration:generate -- -n",
+    "typeorm:run": "npm run typeorm migration:run",
+    "typeorm:revert": "npm run typeorm migration:revert",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
