Create migration setup

--- a/server/package.json
+++ b/server/package.json
@@ -6,11 +6,10 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/typeorm.config.ts",
-    "typeorm:create": "npm run typeorm migration:create -- -n",
-    "typeorm:generate": "npm run typeorm migration:generate -- -n",
-    "typeorm:run": "npm run typeorm migration:run",
-    "typeorm:revert": "npm run typeorm migration:revert",
+    "typeorm": "npm run build && npx typeorm -d dist/db/data-source.js",
+    "migration:generate": "npm run typeorm -- migration:generate",
+    "migration:run": "npm run typeorm -- migration:run",
+    "migration:revert": "npm run typeorm -- migration:revert",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -36,9 +35,11 @@
     "@nestjs/platform-express": "9.3.12",
     "@nestjs/typeorm": "9.0.1",
     "@prisma/client": "4.11.0",
+    "@types/dotenv": "8.2.0",
     "argon2": "0.30.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
+    "dotenv": "16.0.3",
     "passport": "0.6.0",
     "passport-jwt": "4.0.1",
     "pg": "8.10.0",
