--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  db:
+  dev-db:
     image: postgres:14.1-alpine
     restart: always
     environment:
@@ -9,9 +9,12 @@ services:
       - POSTGRES_PASSWORD=postgres
     ports:
       - '5432:5432'
-    volumes:
-      - db:/var/lib/postgresql/data
 
-volumes:
-  db:
-    driver: local
+  test-db:
+    image: postgres:14.1-alpine
+    restart: always
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    ports:
+      - '5433:5432'
