--- a/server/package.json
+++ b/server/package.json
@@ -6,17 +6,27 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "typeorm": "npm run build && npx typeorm -d dist/db/data-source.js",
-    "migration:generate": "npm run typeorm -- migration:generate",
-    "migration:run": "npm run typeorm -- migration:run",
-    "migration:revert": "npm run typeorm -- migration:revert",
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "//": "** RUNNING **",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "//": "** BUILD **",
+    "build": "nest build",
+    "//": "** TYPEORM **",
+    "typeorm": "npm run build && npx typeorm -d dist/db/data-source.js",
+    "migration:generate": "npm run typeorm -- migration:generate",
+    "migration:run": "npm run typeorm -- migration:run",
+    "migration:run:test": "dotenv -e .env.test -- npm run typeorm -- migration:run",
+    "migration:revert": "npm run typeorm -- migration:revert",
+    "//": "** DOCKER **",
+    "db:dev:rm": "docker compose rm dev-db -svf",
+    "db:dev:up": "docker compose up dev-db -d",
+    "db:dev:restart": "npm run db:dev:rm && npm run db:dev:up && npm run migration:run",
+    "db:test:rm": "docker compose rm test-db -svf",
+    "db:test:up": "docker compose up test-db -d",
+    "db:test:restart": "npm run db:test:rm && npm run db:test:up && npm run migration:run:test",
+    "//": "** TESTING **",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -24,7 +34,10 @@
     "pretest:e2e": "npm run db:test:restart",
     "test:e2e": "dotenv -e .env.test -- jest --watch --no-cache --config ./test/jest-e2e.json",
     "pretest:ci": "npm run db:test:restart",
-    "test:ci": "jest --config ./test/jest-e2e.json"
+    "test:ci": "jest --config ./test/jest-e2e.json",
+    "//": "** FORMATING / LINTING **",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
     "@nestjs/common": "9.3.12",
