--- a/.github/workflows/e2e-server-testing.yml
+++ b/.github/workflows/e2e-server-testing.yml
@@ -3,7 +3,7 @@ name: e2e-test-server
 on:
   pull_request:
     branches:
-      - '*server*'    
+      - "**/server/**"
 
 jobs:
   e2e-test-server:
