Change trigger of test:ci backend

--- a/.github/workflows/e2e-server-testing.yml
+++ b/.github/workflows/e2e-server-testing.yml
@@ -2,8 +2,8 @@ name: e2e-test-server
 
 on:
   pull_request:
-    branches:
-      - "**/server/**"
+    paths:
+      - "server/**"
 
 jobs:
   e2e-test-server:
