chore: migrate from prisma to typeorm (#101)
* chore: create docker-compose

* chore: add packages

* Set typeORM in app.module

* Create user entity

* Replace prisma

* Improve autoLoad of entities

* Add typeorm scripts

* Create migration setup

* Uninstall prisma

* Fix tests

* Remove supertest

* Remove comment package.json

* Fix package-lock

* Test echo

* Move env

* Test envs

--- a/.github/workflows/e2e-server-testing.yml
+++ b/.github/workflows/e2e-server-testing.yml
@@ -5,6 +5,10 @@ on:
     paths:
       - "server/**"
 
+env:
+  DATABASE_URL: postgresql://postgres:postgres@127.0.0.1:5433
+  JWT_SECRET: secret
+
 jobs:
   e2e-test-server:
     runs-on: ubuntu-latest
@@ -17,6 +21,3 @@ jobs:
         run: |
           npm i
           npm run test:ci
-        env:
-          DATABASE_URL: ${{vars.DATABASE_URL}}
-          JWT_SECRET: ${{vars.JWT_SECRET}}
