--- a/server/package.json
+++ b/server/package.json
@@ -6,21 +6,22 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "prisma:dev:push": "prisma db push",
-    "db:dev:rm": "docker compose rm dev-db -svf",
-    "db:dev:up": "docker compose up dev-db -d",
-    "db:dev:restart": "npm run db:dev:rm && npm run db:dev:up && sleep 15 && prisma db push",
-    "prisma:test:push": "dotenv -e .env.test -- npm run prisma:dev:push",
-    "db:test:rm": "docker compose rm test-db -svf",
-    "db:test:up": "docker compose up test-db -d",
-    "db:test:restart": "npm run db:test:rm && npm run db:test:up && sleep 15 && npm run prisma:test:push",
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "build": "nest build",
+    "typeorm": "npm run build && npx typeorm -d dist/db/data-source.js",
+    "migration:generate": "npm run typeorm -- migration:generate",
+    "migration:run": "npm run typeorm -- migration:run",
+    "migration:run:test": "dotenv -e .env.test -- npm run typeorm -- migration:run",
+    "migration:revert": "npm run typeorm -- migration:revert",
+    "db:dev:rm": "docker compose rm dev-db -svf",
+    "db:dev:up": "docker compose up dev-db -d",
+    "db:dev:restart": "npm run db:dev:rm && npm run db:dev:up && npm run migration:run",
+    "db:test:rm": "docker compose rm test-db -svf",
+    "db:test:up": "docker compose up test-db -d",
+    "db:test:restart": "npm run db:test:rm && npm run db:test:up && npm run migration:run:test",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -28,7 +29,9 @@
     "pretest:e2e": "npm run db:test:restart",
     "test:e2e": "dotenv -e .env.test -- jest --watch --no-cache --config ./test/jest-e2e.json",
     "pretest:ci": "npm run db:test:restart",
-    "test:ci": "jest --config ./test/jest-e2e.json"
+    "test:ci": "jest --config ./test/jest-e2e.json",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
     "@nestjs/common": "9.3.12",
@@ -37,26 +40,29 @@
     "@nestjs/jwt": "10.0.2",
     "@nestjs/passport": "9.0.3",
     "@nestjs/platform-express": "9.3.12",
-    "@prisma/client": "4.11.0",
+    "@nestjs/typeorm": "9.0.1",
     "argon2": "0.30.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
+    "dotenv": "16.0.3",
     "passport": "0.6.0",
     "passport-jwt": "4.0.1",
+    "pg": "8.10.0",
     "reflect-metadata": "0.1.13",
-    "rxjs": "7.8.0"
+    "rxjs": "7.8.0",
+    "typeorm": "0.3.12"
   },
   "devDependencies": {
     "@nestjs/cli": "9.3.0",
     "@nestjs/schematics": "9.0.4",
     "@nestjs/testing": "9.3.12",
+    "@types/dotenv": "8.2.0",
     "@types/express": "4.17.17",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.6",
     "@types/passport-jwt": "3.0.8",
-    "@types/supertest": "2.0.12",
-    "@typescript-eslint/eslint-plugin": "5.56.0",
-    "@typescript-eslint/parser": "5.56.0",
+    "@typescript-eslint/eslint-plugin": "5.55.0",
+    "@typescript-eslint/parser": "5.55.0",
     "dotenv-cli": "7.1.0",
     "eslint": "8.36.0",
     "eslint-config-prettier": "8.8.0",
@@ -64,9 +70,7 @@
     "jest": "29.5.0",
     "pactum": "3.3.2",
     "prettier": "2.8.6",
-    "prisma": "4.11.0",
     "source-map-support": "0.5.21",
-    "supertest": "6.3.3",
     "ts-jest": "29.0.5",
     "ts-loader": "9.4.2",
     "ts-node": "10.9.1",
