--- a/client/package.json
+++ b/client/package.json
@@ -18,12 +18,13 @@
     "react-dom": "18.2.0",
     "react-router-dom": "6.10.0",
     "universal-cookie": "4.0.4",
+    "usehooks-ts": "2.9.1",
     "zod": "3.21.4"
   },
   "devDependencies": {
     "@types/lodash-es": "4.17.7",
-    "@types/react": "18.0.33",
     "@types/node": "18.15.11",
+    "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "@typescript-eslint/eslint-plugin": "5.57.1",
     "@typescript-eslint/parser": "5.57.1",
