--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.10.0",
+    "tailwindcss-animate": "1.0.5",
     "universal-cookie": "4.0.4",
     "usehooks-ts": "2.9.1",
     "zod": "3.21.4"
