--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .ts,.tsx --fix"
   },
   "dependencies": {
+    "@radix-ui/react-tooltip": "1.0.5",
     "@tanstack/react-query": "4.28.0",
     "clsx": "1.2.1",
     "jwt-decode": "3.1.2",
