--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .ts,.tsx --fix"
   },
   "dependencies": {
+    "@radix-ui/react-tooltip": "1.0.5",
     "@tanstack/react-query": "4.28.0",
     "clsx": "1.2.1",
     "jwt-decode": "3.1.2",
@@ -17,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.10.0",
+    "tailwindcss-animate": "1.0.5",
     "universal-cookie": "4.0.4",
     "usehooks-ts": "2.9.1",
     "zod": "3.21.4"
