--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-tooltip": "1.0.5",
     "@tanstack/react-query": "4.29.3",
+    "axios": "1.3.5",
     "clsx": "1.2.1",
     "jwt-decode": "3.1.2",
     "lodash-es": "4.17.21",
