--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "lodash-es": "4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "2.4.0",
     "react-router-dom": "6.10.0",
     "tailwindcss-animate": "1.0.5",
     "universal-cookie": "4.0.4",
