--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,14 @@
     "lint": "eslint . --ext .ts,.tsx --fix"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "1.0.3",
     "@radix-ui/react-tooltip": "1.0.5",
     "@tanstack/react-query": "4.29.3",
     "axios": "1.3.5",
     "clsx": "1.2.1",
     "jwt-decode": "3.1.2",
     "lodash-es": "4.17.21",
+    "lucide-react": "0.137.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "2.4.0",
